Fix scrollbar styling

--- a/web/src/component/kanban/Column.module.scss
+++ b/web/src/component/kanban/Column.module.scss
@@ -33,11 +33,31 @@
   }
 }
 
+$scrollbar-width: 6px;
+
 .stories {
+  box-sizing: content-box;
   flex: 1;
   margin-top: 4px;
   overflow-y: auto;
   position: relative;
+
+  &::-webkit-scrollbar {
+    width: $scrollbar-width;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: $scrollbar-width / 2;
+
+    &:hover {
+      background: rgba(0, 0, 0, 0.6);
+    }
+  }
 }
 
 .noStory {
